# event-stream-for-k8s

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Jenkinsfile  MAINTAINERS.md  README.md  SECURITY.md  build.rs  sonar-project.properties
src/: config.rs  main.rs  tasks.rs  types.rs
tests/: test_integ.py
tests/integ-test-manifests/: kustomization.yaml
