[package]
name = "event-stream-for-k8s"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
k8s-openapi = { version = "0.25.0", features = ["earliest"] }
kube = { version = "1.1.0", features = ["runtime"] }
prometheus_exporter = "0.8.5"
once_cell = "1.21.3"
serde_json = "1.0.143"
sled = "0.34.7"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
serde = "1.0.219"
# valuable = { version = "0.1.0", features = ["derive"] }
tracing = { version = "0.1.41", features = ["valuable"] }
tracing-log = "0.2.0"
tracing-serde = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "json",
    "registry",
    "valuable",
] }
sentry = { version = "0.46.0", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "transport",
    "reqwest",
    "rustls",
] }
sentry-tracing = "0.42.0"

[profile.release]
debug = true
