[package]
name = "event-stream-for-k8s"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.32"
k8s-openapi = { version = "0.27.1", features = ["earliest"] }
kube = { version = "3.1.0", features = ["runtime"] }
prometheus_exporter = "0.8.5"
once_cell = "1.21.4"
serde_json = "1.0.149"
sled = "0.34.7"
tokio = { version = "1.52.1", features = ["full"] }
thiserror = "2.0.18"
serde = "1.0.228"
# valuable = { version = "0.1.0", features = ["derive"] }
tracing = { version = "0.1.44", features = ["valuable"] }
tracing-log = "0.2.0"
tracing-serde = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "json",
    "registry",
    "valuable",
] }
sentry = { version = "0.48.1", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "transport",
    "reqwest",
    "rustls",
] }
sentry-tracing = "0.47.0"

[profile.release]
debug = true
